iml-services/iml-device/src/snapshots/iml_device__tests__index.snap
---
source: iml-services/iml-device/src/lib.rs
expression: index
---
{
  "mds1.local": {
    "lv_MnjR5BhKX7ff2Gnenq3RrbBbtUsZPLUk": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954",
        "mpath_36001405d44d0229b6d840ba8a04b3954",
        "vg_RJKg8cMQQ288tQC21yfS4rvavnRwLGIn"
      ]
    ],
    "lv_dvF7hSfEolnUSqpKz5uezZUIzkR1W8BG": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228",
        "mpath_3600140596ca21f22ae141bb80dbdd228",
        "vg_1Ue5KZHJDmBBHfSCmMHtelzRtJuqP9HD"
      ]
    ],
    "lv_hIvOjCf52x6n27dxhNn8uyvRxEgan2CU": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea",
        "mpath_36001405447aaaa859754d51ab17b4bea",
        "vg_j5KulVgfHsoJXHLtMvMHJC5V9zZ9CFh0"
      ]
    ],
    "mpath_360014053c952ba8d7774d568af1e3c8a": [
      [
        "root",
        "scsi_360014053c952ba8d7774d568af1e3c8a"
      ]
    ],
    "mpath_36001405447aaaa859754d51ab17b4bea": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea"
      ]
    ],
    "mpath_3600140596ca21f22ae141bb80dbdd228": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228"
      ]
    ],
    "mpath_36001405d44d0229b6d840ba8a04b3954": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954"
      ]
    ],
    "partition1_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root",
        "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e"
      ]
    ],
    "root": [
      []
    ],
    "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root"
      ]
    ],
    "scsi_360014053c952ba8d7774d568af1e3c8a": [
      [
        "root"
      ]
    ],
    "scsi_36001405447aaaa859754d51ab17b4bea": [
      [
        "root"
      ]
    ],
    "scsi_3600140596ca21f22ae141bb80dbdd228": [
      [
        "root"
      ]
    ],
    "scsi_36001405d44d0229b6d840ba8a04b3954": [
      [
        "root"
      ]
    ],
    "vg_1Ue5KZHJDmBBHfSCmMHtelzRtJuqP9HD": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228",
        "mpath_3600140596ca21f22ae141bb80dbdd228"
      ]
    ],
    "vg_RJKg8cMQQ288tQC21yfS4rvavnRwLGIn": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954",
        "mpath_36001405d44d0229b6d840ba8a04b3954"
      ]
    ],
    "vg_j5KulVgfHsoJXHLtMvMHJC5V9zZ9CFh0": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea",
        "mpath_36001405447aaaa859754d51ab17b4bea"
      ]
    ]
  },
  "mds2.local": {
    "lv_MnjR5BhKX7ff2Gnenq3RrbBbtUsZPLUk": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954",
        "mpath_36001405d44d0229b6d840ba8a04b3954",
        "vg_RJKg8cMQQ288tQC21yfS4rvavnRwLGIn"
      ]
    ],
    "lv_dvF7hSfEolnUSqpKz5uezZUIzkR1W8BG": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228",
        "mpath_3600140596ca21f22ae141bb80dbdd228",
        "vg_1Ue5KZHJDmBBHfSCmMHtelzRtJuqP9HD"
      ]
    ],
    "lv_hIvOjCf52x6n27dxhNn8uyvRxEgan2CU": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea",
        "mpath_36001405447aaaa859754d51ab17b4bea",
        "vg_j5KulVgfHsoJXHLtMvMHJC5V9zZ9CFh0"
      ]
    ],
    "mpath_360014053c952ba8d7774d568af1e3c8a": [
      [
        "root",
        "scsi_360014053c952ba8d7774d568af1e3c8a"
      ]
    ],
    "mpath_36001405447aaaa859754d51ab17b4bea": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea"
      ]
    ],
    "mpath_3600140596ca21f22ae141bb80dbdd228": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228"
      ]
    ],
    "mpath_36001405d44d0229b6d840ba8a04b3954": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954"
      ]
    ],
    "partition1_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root",
        "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e"
      ]
    ],
    "root": [
      []
    ],
    "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root"
      ]
    ],
    "scsi_360014053c952ba8d7774d568af1e3c8a": [
      [
        "root"
      ]
    ],
    "scsi_36001405447aaaa859754d51ab17b4bea": [
      [
        "root"
      ]
    ],
    "scsi_3600140596ca21f22ae141bb80dbdd228": [
      [
        "root"
      ]
    ],
    "scsi_36001405d44d0229b6d840ba8a04b3954": [
      [
        "root"
      ]
    ],
    "vg_1Ue5KZHJDmBBHfSCmMHtelzRtJuqP9HD": [
      [
        "root",
        "scsi_3600140596ca21f22ae141bb80dbdd228",
        "mpath_3600140596ca21f22ae141bb80dbdd228"
      ]
    ],
    "vg_RJKg8cMQQ288tQC21yfS4rvavnRwLGIn": [
      [
        "root",
        "scsi_36001405d44d0229b6d840ba8a04b3954",
        "mpath_36001405d44d0229b6d840ba8a04b3954"
      ]
    ],
    "vg_j5KulVgfHsoJXHLtMvMHJC5V9zZ9CFh0": [
      [
        "root",
        "scsi_36001405447aaaa859754d51ab17b4bea",
        "mpath_36001405447aaaa859754d51ab17b4bea"
      ]
    ]
  },
  "oss1.local": {
    "mpath_360014051fb8be0072754fbcbda18b748": [
      [
        "root",
        "scsi_360014051fb8be0072754fbcbda18b748"
      ]
    ],
    "mpath_3600140526c9249cac44477e80aa1a51c": [
      [
        "root",
        "scsi_3600140526c9249cac44477e80aa1a51c"
      ]
    ],
    "mpath_360014053223b86d92534b95b8341c7ba": [
      [
        "root",
        "scsi_360014053223b86d92534b95b8341c7ba"
      ]
    ],
    "mpath_360014053df1931dfe3e422a993c5a90b": [
      [
        "root",
        "scsi_360014053df1931dfe3e422a993c5a90b"
      ]
    ],
    "mpath_36001405420272959e98494c96f044165": [
      [
        "root",
        "scsi_36001405420272959e98494c96f044165"
      ]
    ],
    "mpath_3600140549c0666ae19b4f3f92f71d627": [
      [
        "root",
        "scsi_3600140549c0666ae19b4f3f92f71d627"
      ]
    ],
    "mpath_360014054e9364c5d8ae49d093e6780d6": [
      [
        "root",
        "scsi_360014054e9364c5d8ae49d093e6780d6"
      ]
    ],
    "mpath_36001405684c220023ab45f19cfa1ce94": [
      [
        "root",
        "scsi_36001405684c220023ab45f19cfa1ce94"
      ]
    ],
    "mpath_3600140570cd8063cd7443a6bdaba07b2": [
      [
        "root",
        "scsi_3600140570cd8063cd7443a6bdaba07b2"
      ]
    ],
    "mpath_360014057c0f3e6fc0e44a7bbf37e3a6e": [
      [
        "root",
        "scsi_360014057c0f3e6fc0e44a7bbf37e3a6e"
      ]
    ],
    "mpath_360014057c40e55da9c74aef9bbdf5663": [
      [
        "root",
        "scsi_360014057c40e55da9c74aef9bbdf5663"
      ]
    ],
    "mpath_360014057d653fd869d34fae817cd4ed8": [
      [
        "root",
        "scsi_360014057d653fd869d34fae817cd4ed8"
      ]
    ],
    "mpath_36001405adfcaa64d4274e6db7f8a0a47": [
      [
        "root",
        "scsi_36001405adfcaa64d4274e6db7f8a0a47"
      ]
    ],
    "mpath_36001405b6e4b7df03e94e0ebe6b5c1c2": [
      [
        "root",
        "scsi_36001405b6e4b7df03e94e0ebe6b5c1c2"
      ]
    ],
    "mpath_36001405bbd1f62c6c8a4b02a326033ff": [
      [
        "root",
        "scsi_36001405bbd1f62c6c8a4b02a326033ff"
      ]
    ],
    "mpath_36001405cff8b2320b8540009398c1d52": [
      [
        "root",
        "scsi_36001405cff8b2320b8540009398c1d52"
      ]
    ],
    "mpath_36001405d76ddfb1c1e8417196ef03630": [
      [
        "root",
        "scsi_36001405d76ddfb1c1e8417196ef03630"
      ]
    ],
    "mpath_36001405da664cddd60b4624ba5dbfc8b": [
      [
        "root",
        "scsi_36001405da664cddd60b4624ba5dbfc8b"
      ]
    ],
    "mpath_36001405e0a4b65766074ef79e1880627": [
      [
        "root",
        "scsi_36001405e0a4b65766074ef79e1880627"
      ]
    ],
    "mpath_36001405e7f0a8cd329c4d588f735ed02": [
      [
        "root",
        "scsi_36001405e7f0a8cd329c4d588f735ed02"
      ]
    ],
    "partition1_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root",
        "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e"
      ]
    ],
    "root": [
      []
    ],
    "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root"
      ]
    ],
    "scsi_360014051fb8be0072754fbcbda18b748": [
      [
        "root"
      ]
    ],
    "scsi_3600140526c9249cac44477e80aa1a51c": [
      [
        "root"
      ]
    ],
    "scsi_360014053223b86d92534b95b8341c7ba": [
      [
        "root"
      ]
    ],
    "scsi_360014053df1931dfe3e422a993c5a90b": [
      [
        "root"
      ]
    ],
    "scsi_36001405420272959e98494c96f044165": [
      [
        "root"
      ]
    ],
    "scsi_3600140549c0666ae19b4f3f92f71d627": [
      [
        "root"
      ]
    ],
    "scsi_360014054e9364c5d8ae49d093e6780d6": [
      [
        "root"
      ]
    ],
    "scsi_36001405684c220023ab45f19cfa1ce94": [
      [
        "root"
      ]
    ],
    "scsi_3600140570cd8063cd7443a6bdaba07b2": [
      [
        "root"
      ]
    ],
    "scsi_360014057c0f3e6fc0e44a7bbf37e3a6e": [
      [
        "root"
      ]
    ],
    "scsi_360014057c40e55da9c74aef9bbdf5663": [
      [
        "root"
      ]
    ],
    "scsi_360014057d653fd869d34fae817cd4ed8": [
      [
        "root"
      ]
    ],
    "scsi_36001405adfcaa64d4274e6db7f8a0a47": [
      [
        "root"
      ]
    ],
    "scsi_36001405b6e4b7df03e94e0ebe6b5c1c2": [
      [
        "root"
      ]
    ],
    "scsi_36001405bbd1f62c6c8a4b02a326033ff": [
      [
        "root"
      ]
    ],
    "scsi_36001405cff8b2320b8540009398c1d52": [
      [
        "root"
      ]
    ],
    "scsi_36001405d76ddfb1c1e8417196ef03630": [
      [
        "root"
      ]
    ],
    "scsi_36001405da664cddd60b4624ba5dbfc8b": [
      [
        "root"
      ]
    ],
    "scsi_36001405e0a4b65766074ef79e1880627": [
      [
        "root"
      ]
    ],
    "scsi_36001405e7f0a8cd329c4d588f735ed02": [
      [
        "root"
      ]
    ]
  },
  "oss2.local": {
    "mpath_360014051fb8be0072754fbcbda18b748": [
      [
        "root",
        "scsi_360014051fb8be0072754fbcbda18b748"
      ]
    ],
    "mpath_3600140526c9249cac44477e80aa1a51c": [
      [
        "root",
        "scsi_3600140526c9249cac44477e80aa1a51c"
      ]
    ],
    "mpath_360014053223b86d92534b95b8341c7ba": [
      [
        "root",
        "scsi_360014053223b86d92534b95b8341c7ba"
      ]
    ],
    "mpath_360014053df1931dfe3e422a993c5a90b": [
      [
        "root",
        "scsi_360014053df1931dfe3e422a993c5a90b"
      ]
    ],
    "mpath_36001405420272959e98494c96f044165": [
      [
        "root",
        "scsi_36001405420272959e98494c96f044165"
      ]
    ],
    "mpath_3600140549c0666ae19b4f3f92f71d627": [
      [
        "root",
        "scsi_3600140549c0666ae19b4f3f92f71d627"
      ]
    ],
    "mpath_360014054e9364c5d8ae49d093e6780d6": [
      [
        "root",
        "scsi_360014054e9364c5d8ae49d093e6780d6"
      ]
    ],
    "mpath_36001405684c220023ab45f19cfa1ce94": [
      [
        "root",
        "scsi_36001405684c220023ab45f19cfa1ce94"
      ]
    ],
    "mpath_3600140570cd8063cd7443a6bdaba07b2": [
      [
        "root",
        "scsi_3600140570cd8063cd7443a6bdaba07b2"
      ]
    ],
    "mpath_360014057c0f3e6fc0e44a7bbf37e3a6e": [
      [
        "root",
        "scsi_360014057c0f3e6fc0e44a7bbf37e3a6e"
      ]
    ],
    "mpath_360014057c40e55da9c74aef9bbdf5663": [
      [
        "root",
        "scsi_360014057c40e55da9c74aef9bbdf5663"
      ]
    ],
    "mpath_360014057d653fd869d34fae817cd4ed8": [
      [
        "root",
        "scsi_360014057d653fd869d34fae817cd4ed8"
      ]
    ],
    "mpath_36001405adfcaa64d4274e6db7f8a0a47": [
      [
        "root",
        "scsi_36001405adfcaa64d4274e6db7f8a0a47"
      ]
    ],
    "mpath_36001405b6e4b7df03e94e0ebe6b5c1c2": [
      [
        "root",
        "scsi_36001405b6e4b7df03e94e0ebe6b5c1c2"
      ]
    ],
    "mpath_36001405bbd1f62c6c8a4b02a326033ff": [
      [
        "root",
        "scsi_36001405bbd1f62c6c8a4b02a326033ff"
      ]
    ],
    "mpath_36001405cff8b2320b8540009398c1d52": [
      [
        "root",
        "scsi_36001405cff8b2320b8540009398c1d52"
      ]
    ],
    "mpath_36001405d76ddfb1c1e8417196ef03630": [
      [
        "root",
        "scsi_36001405d76ddfb1c1e8417196ef03630"
      ]
    ],
    "mpath_36001405da664cddd60b4624ba5dbfc8b": [
      [
        "root",
        "scsi_36001405da664cddd60b4624ba5dbfc8b"
      ]
    ],
    "mpath_36001405e0a4b65766074ef79e1880627": [
      [
        "root",
        "scsi_36001405e0a4b65766074ef79e1880627"
      ]
    ],
    "mpath_36001405e7f0a8cd329c4d588f735ed02": [
      [
        "root",
        "scsi_36001405e7f0a8cd329c4d588f735ed02"
      ]
    ],
    "partition1_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root",
        "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e"
      ]
    ],
    "root": [
      []
    ],
    "scsi_1ATA     VBOX HARDDISK                           VB4fdc3547-596dc02e": [
      [
        "root"
      ]
    ],
    "scsi_360014051fb8be0072754fbcbda18b748": [
      [
        "root"
      ]
    ],
    "scsi_3600140526c9249cac44477e80aa1a51c": [
      [
        "root"
      ]
    ],
    "scsi_360014053223b86d92534b95b8341c7ba": [
      [
        "root"
      ]
    ],
    "scsi_360014053df1931dfe3e422a993c5a90b": [
      [
        "root"
      ]
    ],
    "scsi_36001405420272959e98494c96f044165": [
      [
        "root"
      ]
    ],
    "scsi_3600140549c0666ae19b4f3f92f71d627": [
      [
        "root"
      ]
    ],
    "scsi_360014054e9364c5d8ae49d093e6780d6": [
      [
        "root"
      ]
    ],
    "scsi_36001405684c220023ab45f19cfa1ce94": [
      [
        "root"
      ]
    ],
    "scsi_3600140570cd8063cd7443a6bdaba07b2": [
      [
        "root"
      ]
    ],
    "scsi_360014057c0f3e6fc0e44a7bbf37e3a6e": [
      [
        "root"
      ]
    ],
    "scsi_360014057c40e55da9c74aef9bbdf5663": [
      [
        "root"
      ]
    ],
    "scsi_360014057d653fd869d34fae817cd4ed8": [
      [
        "root"
      ]
    ],
    "scsi_36001405adfcaa64d4274e6db7f8a0a47": [
      [
        "root"
      ]
    ],
    "scsi_36001405b6e4b7df03e94e0ebe6b5c1c2": [
      [
        "root"
      ]
    ],
    "scsi_36001405bbd1f62c6c8a4b02a326033ff": [
      [
        "root"
      ]
    ],
    "scsi_36001405cff8b2320b8540009398c1d52": [
      [
        "root"
      ]
    ],
    "scsi_36001405d76ddfb1c1e8417196ef03630": [
      [
        "root"
      ]
    ],
    "scsi_36001405da664cddd60b4624ba5dbfc8b": [
      [
        "root"
      ]
    ],
    "scsi_36001405e0a4b65766074ef79e1880627": [
      [
        "root"
      ]
    ],
    "scsi_36001405e7f0a8cd329c4d588f735ed02": [
      [
        "root"
      ]
    ]
  }
}
