iml-services/iml-device/src/snapshots/iml_device__tests__upserts_and_deletions.snap
---
source: iml-services/iml-device/src/lib.rs
expression: xs
---
[
    Target {
        state: "unmounted",
        name: "mdt1",
        active_host_id: None,
        host_ids: [
            2,
        ],
        filesystems: [
            "fs1",
        ],
        uuid: "123456",
        mount_path: Some(
            "/mnt/mdt1",
        ),
    },
    Target {
        state: "mounted",
        name: "mdt2",
        active_host_id: Some(
            2,
        ),
        host_ids: [
            1,
        ],
        filesystems: [
            "fs1",
        ],
        uuid: "654321",
        mount_path: Some(
            "/mnt/mdt2",
        ),
    },
    Target {
        state: "mounted",
        name: "ost1",
        active_host_id: Some(
            3,
        ),
        host_ids: [
            4,
        ],
        filesystems: [
            "fs1",
        ],
        uuid: "567890",
        mount_path: Some(
            "/mnt/ost1",
        ),
    },
]
